docs(components): adding web components links to usage tabs

--- a/src/pages/components/accordion/usage.mdx
+++ b/src/pages/components/accordion/usage.mdx
@@ -69,6 +69,7 @@ extra click; instead use a full scrolling page with normal headers.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvaccordion--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=accordion',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-accordion--default',
     }}>
     {`
   <Accordion>
