--- a/src/pages/components/breadcrumb/usage.mdx
+++ b/src/pages/components/breadcrumb/usage.mdx
@@ -79,6 +79,7 @@ type used should be consistent across a product.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}>{`
 <Breadcrumb noTrailingSlash>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
@@ -96,6 +97,7 @@ type used should be consistent across a product.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbreadcrumb--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=breadcrumb',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-breadcrumb--default',
     }}>{`
 <Breadcrumb>
   <BreadcrumbItem href="/">Breadcrumb 1</BreadcrumbItem>
