--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -111,6 +111,7 @@ import { Add16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}>{`
       <Button>Button</Button>
     `}</ComponentVariant>
@@ -127,6 +128,7 @@ import { Add16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}>{`
       <Button renderIcon={Add16}>Button</Button>
     `}</ComponentVariant>
@@ -143,6 +145,7 @@ import { Add16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
     }}>{`
       <Button
         hasIconOnly
