--- a/src/pages/components/checkbox/usage.mdx
+++ b/src/pages/components/checkbox/usage.mdx
@@ -107,6 +107,7 @@ set whereas radio buttons allow the user to select only one option.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcheckbox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=checkbox',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-checkbox--default',
     }}>{`
 <fieldset className="bx--fieldset">
   <legend className="bx--label">Checkbox heading</legend>
