--- a/src/pages/components/content-switcher/usage.mdx
+++ b/src/pages/components/content-switcher/usage.mdx
@@ -86,6 +86,7 @@ binary decision.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcontentswitcher--default',
       Vanilla:
         'https://the-carbon-components.netlify.com/?nav=content-switcher',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-content-switcher--default',
     }}>{`
 <ContentSwitcher onChange={console.log}>
   <Switch name={'first'} text='First section' />
