--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -96,6 +96,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
@@ -135,6 +136,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
@@ -183,6 +185,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
     }}>
     {`<DataTable
   rows={rowData}
@@ -231,6 +234,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
