--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -84,6 +84,7 @@ for scheduling tasks.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="simple">
       <DatePickerInput
@@ -108,6 +109,7 @@ for scheduling tasks.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--single',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--single-with-calendar',
     }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="single">
       <DatePickerInput
@@ -132,6 +134,7 @@ for scheduling tasks.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatepicker--range',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--range-with-calendar',
     }}>{`
     <DatePicker dateFormat="m/d/Y" datePickerType="range">
       <DatePickerInput
@@ -161,6 +164,7 @@ for scheduling tasks.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/storycomponents-cvdatepicker--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=date-picker',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-date-picker--default',
     }}>{`
     <TimePicker id="time-picker">
       <TimePickerSelect id="time-picker-select-1">
