--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -82,6 +82,7 @@ file uploader.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}>{`
       <div className="bx--file__container">
         <FileUploader
@@ -111,6 +112,7 @@ file uploader.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}>{`
       <div className="bx--file__container">
         <strong className='bx--file--label'>Account photo</strong>
@@ -140,6 +142,7 @@ file uploader.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvfileuploader--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=file-uploader',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-file-uploader--default',
     }}>{`
       <div className="bx--file__container">
         <FileUploaderItem name='color.jpg' errorSubject='File size exceeds limits' errorBody='500 kb max file size. Select a new file and try again.'/>
