--- a/src/pages/components/form/usage.mdx
+++ b/src/pages/components/form/usage.mdx
@@ -61,6 +61,7 @@ do you gain by collecting this information?
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvform--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=form',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--form-item',
     }}>{`
   <Form>
   <div style={{marginBottom: '2rem'}}>
