--- a/src/pages/components/inline-loading/usage.mdx
+++ b/src/pages/components/inline-loading/usage.mdx
@@ -70,6 +70,7 @@ table, after a primary or secondary button click, or even in a modal.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=inline-loading',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
     }}>{`
     <InlineLoading description="Loading..." />
   `}</ComponentVariant>
