--- a/src/pages/components/list/usage.mdx
+++ b/src/pages/components/list/usage.mdx
@@ -56,6 +56,7 @@ between list items.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-list--ordered',
     }}>{`
     <OrderedList>
       <ListItem>
@@ -90,6 +91,7 @@ between list items.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=list',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-list--unordered',
     }}>{`
       <UnorderedList>
         <ListItem>
