--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -103,6 +103,7 @@ destructive or irreversible then use a transactional danger modal.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
@@ -122,6 +123,7 @@ destructive or irreversible then use a transactional danger modal.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}>{`
     <ModalWrapper
       hasScrollingContent
@@ -168,6 +170,7 @@ destructive or irreversible then use a transactional danger modal.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
     }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
@@ -188,6 +191,7 @@ destructive or irreversible then use a transactional danger modal.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
     }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
