--- a/src/pages/components/number-input/usage.mdx
+++ b/src/pages/components/number-input/usage.mdx
@@ -50,6 +50,7 @@ or decrease an incremental value.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}>{`
     <NumberInput
       helperText="Optional helper text"
@@ -72,6 +73,7 @@ or decrease an incremental value.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}>{`
         <NumberInput
           isMobile
