--- a/src/pages/components/progress-indicator/usage.mdx
+++ b/src/pages/components/progress-indicator/usage.mdx
@@ -52,6 +52,7 @@ percentage of completeness as each task is completed.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvprogress--default',
       Vanilla:
         'https://the-carbon-components.netlify.com/?nav=progress-indicator',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-progress-indicator--default',
     }}>{`
   <div className="some-container">
     <ProgressIndicator currentIndex={1}>
