--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -95,6 +95,7 @@ checkboxes allow the user to select multiple options.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvradiobutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=radio-button',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-radio-button--default',
     }}>{`
   <FormGroup
   legendText="Radio button heading"
