--- a/src/pages/components/search/usage.mdx
+++ b/src/pages/components/search/usage.mdx
@@ -49,6 +49,7 @@ to aid the user in finding content.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvsearch--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=search',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-search--default',
     }}>{`
 <Search
   id="search-1"
