--- a/src/pages/components/structured-list/usage.mdx
+++ b/src/pages/components/structured-list/usage.mdx
@@ -45,6 +45,7 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}>{`
     <StructuredListWrapper ariaLabel="Structured list">
       <StructuredListHead>
@@ -99,6 +100,7 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--selectable-with-events',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}>{`
     <StructuredListWrapper selection ariaLabel="Structured list">
       <StructuredListHead>
