--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -55,6 +55,7 @@ Tabs are used to quickly navigate between views within the same context.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}>{`
 <div style={{ width: '50%' }}>
   <Tabs scrollIntoView={false}>
