--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -64,6 +64,7 @@ reflect the length of the content you expect the user to enter.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}>{`
     <div>
       <TextInput
@@ -85,6 +86,7 @@ reflect the length of the content you expect the user to enter.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}>{`
     <div>
     <TextInput.PasswordInput
@@ -111,6 +113,7 @@ reflect the length of the content you expect the user to enter.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
     }}>{`
     <div>
     <TextArea
