--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -97,6 +97,7 @@ modules. Here are some common use cases for when to use tiles:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
     }}>{`
     <Tile>
       Default tile
@@ -114,6 +115,7 @@ modules. Here are some common use cases for when to use tiles:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
     }}>{`
     <ClickableTile
       href="#"
@@ -133,6 +135,7 @@ modules. Here are some common use cases for when to use tiles:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--clickable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--clickable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}>{`
     <TileGroup
       defaultSelected="default-selected"
@@ -177,6 +180,7 @@ modules. Here are some common use cases for when to use tiles:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--selectable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--selectable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}>{`
     <div
       aria-label="selectable tiles"
@@ -223,6 +227,7 @@ modules. Here are some common use cases for when to use tiles:
         'https://angular.carbondesignsystem.com/?path=/story/components-tiles--expandable',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--expandable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
     }}>{`
     <ExpandableTile
       tabIndex={0}
