--- a/src/pages/components/toggle/usage.mdx
+++ b/src/pages/components/toggle/usage.mdx
@@ -60,6 +60,7 @@ user “flips the switch”. They are commonly used for “on/off” switches.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}>{`
     <Toggle
       aria-label="toggle button"
@@ -78,6 +79,7 @@ user “flips the switch”. They are commonly used for “on/off” switches.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoggle--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=toggle',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-toggle--default',
     }}>{`
     <ToggleSmall
       aria-label="toggle button"
