--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -64,6 +64,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
     }}>{`
     <Tooltip
       direction="bottom"
@@ -94,6 +95,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
     }}>{`
     <TooltipIcon
       tooltipText="Filter"
@@ -114,6 +116,7 @@ import { Filter16 } from '@carbon/icons-react';
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
     }}>{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
