--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -87,6 +87,7 @@ length use cases—inline, single line, and multi-line.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
     }}>{`
     <CodeSnippet type="single">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
@@ -101,6 +102,7 @@ length use cases—inline, single line, and multi-line.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
     }}>{`
     <CodeSnippet type="multi">
     {codeSnippet}
@@ -117,6 +119,7 @@ length use cases—inline, single line, and multi-line.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
     }}>{`
     <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
