--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -102,6 +102,7 @@ functionality—dropdown, multiselect, and combo box.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
     }}>{`
     <Dropdown
       ariaLabel="Dropdown"
@@ -124,6 +125,7 @@ functionality—dropdown, multiselect, and combo box.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
     }}>{`
     <ComboBox
       ariaLabel="ComboBox"
@@ -146,6 +148,7 @@ functionality—dropdown, multiselect, and combo box.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}>{`
     <MultiSelect
       ariaLabel="MultiSelect"
@@ -165,6 +168,7 @@ functionality—dropdown, multiselect, and combo box.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}>{`
     <MultiSelect.Filterable
       ariaLabel="Filterable MultiSelect"
