--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -77,6 +77,7 @@ be used for navigational actions.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvlink--a',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=link',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-link--default',
     }}>{`
   <Link href="#">Link</Link>
   `}</ComponentVariant>
