--- a/src/pages/components/loading/usage.mdx
+++ b/src/pages/components/loading/usage.mdx
@@ -52,6 +52,7 @@ three seconds.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=loading',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-loading--default',
     }}>{`
     <Loading
       description="Active loading indicator" withOverlay={false}
