--- a/src/pages/components/modal/code.mdx
+++ b/src/pages/components/modal/code.mdx
@@ -112,6 +112,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--default',
     }}>{`
     <ModalWrapper
       hasScrollingContent
@@ -158,6 +159,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--single-button',
     }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
@@ -178,6 +180,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmodal--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=modal',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-modal--three-buttons',
     }}>{`
     <ModalWrapper
       buttonTriggerText="Launch modal"
