--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -75,6 +75,7 @@ product teams also support banners and notification centers.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtoastnotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--toast',
     }}>{`
     <div>
       <ToastNotification
@@ -99,6 +100,7 @@ product teams also support banners and notification centers.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvinlinenotification--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=notification',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-notifications--inline',
     }}>{`
   <div>
     <InlineNotification
