--- a/src/pages/components/overflow-menu/usage.mdx
+++ b/src/pages/components/overflow-menu/usage.mdx
@@ -48,6 +48,7 @@ there is a space constraint.
         'https://angular.carbondesignsystem.com/?path=/story/components-overflow-menu--basic',
       Vue: 'http://vue.carbondesignsystem.com/?path=/story/components-cvoverflowmenu--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=overflow-menu',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-overflow-menu--default',
     }}>{`
     <OverflowMenu
       data-floating-menu-container
