--- a/src/pages/components/pagination/usage.mdx
+++ b/src/pages/components/pagination/usage.mdx
@@ -56,6 +56,7 @@ The default number displayed will vary depending on the context.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvpagination--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=pagination',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-pagination--default',
     }}>{`
   <div style={{width: '800px'}}>
     <Pagination
