--- a/src/pages/components/select/usage.mdx
+++ b/src/pages/components/select/usage.mdx
@@ -66,6 +66,7 @@ while the dropdown component can be styled as needed.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=select',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-select--default',
     }}>{`
 <Select
   defaultValue="placeholder-item"
