--- a/src/pages/components/tag/usage.mdx
+++ b/src/pages/components/tag/usage.mdx
@@ -72,6 +72,7 @@ that particular category.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtag--filter',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tag',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tag--default',
     }}>{`
   <>
 <Tag type="red" title="Clear Filter"> Red </Tag>
