docs(web-components): adding code links for web components (#2588)
* docs(web-components): adding code links for web components

* fix(components): fixing quotes for web components

* docs(components): adding web components links to usage tabs

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/data-table/code.mdx
+++ b/src/pages/components/data-table/code.mdx
@@ -53,6 +53,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -88,6 +98,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--minimal',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({ rows, headers, getHeaderProps, getTableProps }) => (
@@ -127,6 +138,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
@@ -175,6 +187,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--slotted-expanding-data',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--expandable',
     }}>
     {`<DataTable
   rows={rowData}
@@ -223,6 +236,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdatatable--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=data-table',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-data-table--default',
     }}>
     {`<DataTable rows={rowData} headers={headerData}>
   {({
