--- a/src/pages/components/dropdown/code.mdx
+++ b/src/pages/components/dropdown/code.mdx
@@ -48,6 +48,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -85,6 +95,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvdropdown--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-dropdown--default',
     }}>{`
     <Dropdown
       ariaLabel="Dropdown"
@@ -107,6 +118,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcombobox--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-combo-box--default',
     }}>{`
     <ComboBox
       ariaLabel="ComboBox"
@@ -129,6 +141,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}>{`
     <MultiSelect
       ariaLabel="MultiSelect"
@@ -148,6 +161,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvmultiselect--user-filter-and-or-highlight',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=dropdown',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-multi-select--default',
     }}>{`
     <MultiSelect.Filterable
       ariaLabel="Filterable MultiSelect"
