--- a/src/pages/components/tabs/code.mdx
+++ b/src/pages/components/tabs/code.mdx
@@ -45,6 +45,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -67,6 +77,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtabs--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tabs',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tabs--default',
     }}>{`
 <div style={{ width: '50%' }}>
   <Tabs scrollIntoView={false}>
