--- a/src/pages/components/button/code.mdx
+++ b/src/pages/components/button/code.mdx
@@ -48,6 +48,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-button--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -81,6 +91,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}>{`
       <Button>Button</Button>
     `}</ComponentVariant>
@@ -97,6 +108,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--default',
     }}>{`
       <Button renderIcon={Add16}>Button</Button>
     `}</ComponentVariant>
@@ -113,6 +125,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvbutton--icon-only',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=button',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-button--icon',
     }}>{`
       <Button
         hasIconOnly
