--- a/src/pages/components/code-snippet/code.mdx
+++ b/src/pages/components/code-snippet/code.mdx
@@ -46,6 +46,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -82,6 +92,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--single-line',
     }}>{`
     <CodeSnippet type="single">
     ${codeSnippetSingle}
@@ -98,6 +109,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--multi-line',
     }}>{`
     <CodeSnippet type="multi">
     ${codeSnippet}
@@ -114,6 +126,7 @@ import {
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcodesnippet--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=code-snippet',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-code-snippet--inline',
     }}>{`
     <CodeSnippet type="inline">${codeSnippetSingle}</CodeSnippet>
 `}</ComponentVariant>
