--- a/src/pages/components/content-switcher/code.mdx
+++ b/src/pages/components/content-switcher/code.mdx
@@ -47,6 +47,16 @@ code usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-content-switcher--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -73,6 +83,7 @@ code usage documentation, see the Storybooks for each framework below.
         'http://vue.carbondesignsystem.com/?path=/story/components-cvcontentswitcher--default',
       Vanilla:
         'https://the-carbon-components.netlify.com/?nav=content-switcher',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-content-switcher--default',
     }}>{`
 <ContentSwitcher onChange={console.log}>
   <Switch name={'first'} text='First section' />
