--- a/src/pages/components/inline-loading/code.mdx
+++ b/src/pages/components/inline-loading/code.mdx
@@ -45,6 +45,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -69,6 +79,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvinlineloading--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=inline-loading',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-inline-loading--default',
     }}>{`
     <InlineLoading description="Loading..." />
   `}</ComponentVariant>
