--- a/src/pages/components/number-input/code.mdx
+++ b/src/pages/components/number-input/code.mdx
@@ -46,6 +46,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -71,6 +81,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}>{`
     <NumberInput
       helperText="Optional helper text"
@@ -93,6 +104,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvnumberinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=number-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-number-input--default',
     }}>{`
         <NumberInput
           isMobile
