--- a/src/pages/components/structured-list/code.mdx
+++ b/src/pages/components/structured-list/code.mdx
@@ -48,6 +48,16 @@ code usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -74,6 +84,7 @@ code usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}>{`
     <StructuredListWrapper ariaLabel="Structured list">
       <StructuredListHead>
@@ -128,6 +139,7 @@ code usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvstructuredlist--selectable-with-events',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=structured-list',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-structured-list--default',
     }}>{`
     <StructuredListWrapper selection ariaLabel="Structured list">
       <StructuredListHead>
