--- a/src/pages/components/text-input/code.mdx
+++ b/src/pages/components/text-input/code.mdx
@@ -46,6 +46,16 @@ usage documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-input--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -78,6 +88,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}>{`
     <div>
       <TextInput
@@ -99,6 +110,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextinput--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-input--default',
     }}>{`
     <div>
     <TextInput.PasswordInput
@@ -125,6 +137,7 @@ usage documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtextarea--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=text-input',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-textarea--default',
     }}>{`
     <div>
     <TextArea
