--- a/src/pages/components/tile/code.mdx
+++ b/src/pages/components/tile/code.mdx
@@ -46,6 +46,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-tile--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -86,6 +96,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--default',
     }}>{`
     <Tile>
       Default tile
@@ -104,6 +115,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--default',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--clickable',
     }}>{`
     <ClickableTile
       href="#"
@@ -124,6 +136,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--clickable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}>{`
     <TileGroup
       defaultSelected="default-selected"
@@ -169,6 +182,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--selectable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--single-selectable',
     }}>{`
     <div
       aria-label="selectable tiles"
@@ -216,6 +230,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtile--expandable',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tile',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tile--expandable',
     }}>{`
     <ExpandableTile
       tabIndex={0}
