--- a/src/pages/components/tooltip/code.mdx
+++ b/src/pages/components/tooltip/code.mdx
@@ -48,6 +48,16 @@ documentation, see the Storybooks for each framework below.
 
   </ResourceCard>
 </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+      subTitle="Web Components (Community)"
+      href="https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default"
+      >
+
+<MdxIcon name="webcomponents" />
+
+  </ResourceCard>
+</Column>
 </Row>
 
 ## Live demo
@@ -78,6 +88,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-interactive-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--default',
     }}>{`
     <Tooltip
       direction="bottom"
@@ -108,6 +119,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--icon',
     }}>{`
     <TooltipIcon
       tooltipText="Filter"
@@ -128,6 +140,7 @@ documentation, see the Storybooks for each framework below.
       Vue:
         'http://vue.carbondesignsystem.com/?path=/story/components-cvtooltip--default-definition-tootlip',
       Vanilla: 'https://the-carbon-components.netlify.com/?nav=tooltip',
+      "Web Components": 'https://web-components.carbondesignsystem.com/?path=/story/components-tooltip--definition',
     }}>{`
     <TooltipDefinition
       tooltipText="Brief description of the dotted, underlined word above."
