docs[designing]: added freehand resource

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -14,13 +14,14 @@ templates, color palettes, GitHub repos, and design tools.
 
 <AnchorLinks>
   <AnchorLink>Introduction</AnchorLink>
-  <AnchorLink>Data visualization Sketch file</AnchorLink>
+  <AnchorLink>Data visualization</AnchorLink>
   <AnchorLink>Elements</AnchorLink>
   <AnchorLink>Extensions</AnchorLink>
   <AnchorLink>Fonts</AnchorLink>
-  <AnchorLink>Gatsby theme resources</AnchorLink>
+  <AnchorLink>Gatsby theme</AnchorLink>
   <AnchorLink>GitHub repos</AnchorLink>
-  <AnchorLink>Mobile Sketch resources</AnchorLink>
+  <AnchorLink>Native mobile</AnchorLink>
+  <AnchorLink>Prototyping tools</AnchorLink>
 
 </AnchorLinks>
 
@@ -33,7 +34,7 @@ To use the Sketch libraries you'll find here, you need the **most recent
 version** of [Sketch](https://www.sketch.com/) installed. If you’re new to the
 design kit, visit the [Design kits](/designing/kits/sketch) page.
 
-## Data visualization Sketch file
+## Data visualization
 
 The Data visualization Sketch file includes basic and complex chart assets,
 along with usage guidance, theming guidance, palettes, and sample layouts.
@@ -145,7 +146,7 @@ Carbon uses the open-source typeface [IBM Plex](https://github.com/ibm/plex) –
 carefully designed to meet IBM's needs as a global technology company and
 reflect IBM's spirit, beliefs, and design principles.
 
-## Gatsby theme resources
+## Gatsby theme
 
 The Gatsby Sketch kit has all the components, patterns, and sample layouts that
 have been developed by teams within the IBM ecosystem. The Gatsby theme site
@@ -218,11 +219,11 @@ to help designers with every aspect of image creation and component specs.
 </Column>
 </Row>
 
-## Mobile Sketch resources
+## Native mobile
 
-These Carbon mobile Sketch resources include everything you need to get your iOS
-or Android project underway. Install the grid template, be inspired by the
-patterns and examples, and get started with either the Light or Dark theme.
+These Carbon native mobile Sketch resources include everything you need to get
+your iOS or Android project underway. Install the grid template, be inspired by
+the patterns and examples, and get started with either the Light or Dark theme.
 
 <Row className="resource-card-group">
 
@@ -259,5 +260,23 @@ patterns and examples, and get started with either the Light or Dark theme.
   </ResourceCard>
 </Column>
 </Row>
+
+## Prototyping tools
+
+### Invision Freehand kit
+
+A Carbon wireframe kit for Invision Freehand is available for teams to create
+low fidelity wireframes. This kit is maintained by the Cloud PAL community.
+
+#### How to access the kit:
+
+1. Log into [Invision Freehand](https://ibm.invisionapp.com/freehand/) and
+   create a new freehand.
+2. Next, select `Wireframes and flowcharts` from the template window.
+3. Select `Wireframe - carbon components` by Kamil Zal.
+
+For more instructions go to
+[IBM Cloud PAL](https://pages.github.ibm.com/ibmcloud/pal/resources/resources/#invision-freehand-kit)
+_IBMers only_.
 
 <br />
