--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -607,7 +607,7 @@ what content it contains but all types of tiles can take focus.
 | Key             | Interaction                                                                                                                                                                |
 | --------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Tab             | Move forward through tiles (if tiles themselves are clickable) and interactive elements within the tiles in a logical order                                                |
-| Shit + Tab      | Move backward through tiles (if tiles themselves are clickable) and interactive elements within the tiles in a logical order                                               |
+| Shift + Tab      | Move backward through tiles (if tiles themselves are clickable) and interactive elements within the tiles in a logical order                                               |
 | Return or Enter | Return or enter will open the tile (if the tile itself is clickable). If the tile is not clickable but has interactive elements, their corresponding actions are performed |
 | Space           | If the tile is selectable, the space bar will toggle tile selection                                                                                                        |
 
