--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -670,7 +670,7 @@ Learn more about our Popover component and it's API below:
 We have updated the notification components to be more accessible out of the
 box. `ToastNotification` and `InlineNotification` now have `role="status"` by
 default with additional `role` options of `log` and `alert`. These components do
-not recieve focus and should be used for information-only use cases. These
+not receive focus and should be used for information-only use cases. These
 components no longer accept actions or interactive children.
 
 For notifications requiring an action, a new `ActionableNotifiation` component
